k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tace-chat
  labels:
    app: tace-chat
