k8s/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tace-node-bootstrap
  namespace: tace-chat
  labels:
    app: tace-node-bootstrap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tace-node-bootstrap
  template:
    metadata:
      labels:
        app: tace-node-bootstrap
    spec:
      containers:
      - name: tace-node
        image: ${DOCKER_USERNAME}/tace-node:${GITHUB_REF_NAME}
        ports:
        - name: api
          containerPort: 80
        - name: p2p
          containerPort: 6512
---
apiVersion: v1
kind: Service
metadata:
  name: tace-node-bootstrap-api
  namespace: tace-chat
spec:
  selector:
    app: tace-node-bootstrap
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tace-node-bootstrap-p2p
  namespace: tace-chat
spec:
  selector:
    app: tace-node-bootstrap
  ports:
    - name: p2p
      protocol: TCP
      port: 6512
      targetPort: p2p
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tace-node-pip
  namespace: tace-chat
  labels:
    app: tace-node-pip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tace-node-pip
  template:
    metadata:
      labels:
        app: tace-node-pip
    spec:
      containers:
      - name: tace-node
        image: ${DOCKER_USERNAME}/tace-node:${GITHUB_REF_NAME}
        ports:
        - name: api
          containerPort: 80
        - name: p2p
          containerPort: 6513
---
apiVersion: v1
kind: Service
metadata:
  name: tace-node-pip-api
  namespace: tace-chat
spec:
  selector:
    app: tace-node-pip
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tace-node-pip-p2p
  namespace: tace-chat
spec:
  selector:
    app: tace-node-pip
  ports:
    - name: p2p
      protocol: TCP
      port: 6513
      targetPort: p2p
  type: LoadBalancer
